--- a/style.css
+++ b/style.css
@@ -20,29 +20,28 @@
 /* misc variables */
 body {
   background-color: #EDEDED;
-  display: flex;
   height: 100vh;
   width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container {
-  margin: auto;
-}
-
-.action-button {
+.button-base, #add-button, table button, table tbody .delete, header .header__button button {
   border: none;
-  border-radius: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Montserrat", sans-serif;
   cursor: pointer;
 }
 
-header h1 {
+header .header__disclaimer h1 {
   color: #226D68;
   font-family: "FuturaLT", sans-serif;
   font-size: 48px;
 }
-header p {
+header .header__disclaimer p {
   color: #D6955B;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
@@ -56,8 +55,8 @@ header .header__button {
 header .header__button button {
   height: 35px;
   width: 35px;
-  display: inline-flex;
   background-color: #D9D9D9;
+  border-radius: 50%;
 }
 header .header__button button#light-mode-toggle {
   background-color: #333333;
@@ -92,11 +91,30 @@ table thead tr th:first-child {
 table tbody td {
   border-left: #E7E7E7 solid 1px;
   padding: 10px;
-  vertical-align: top;
 }
 table tbody td:first-child {
   border: none;
   font-weight: 500;
+}
+table tbody td:last-child {
+  position: relative;
+}
+table tbody .delete {
+  width: 20px;
+  height: 20px;
+  background-color: #BB3434;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10%;
+  border-radius: 50%;
+  display: none;
+}
+table tbody .delete svg {
+  stroke: #FFFFFF;
+}
+table tbody tr:hover .delete {
+  display: flex;
 }
 table tbody td:nth-child(1),
 table tbody td:nth-child(2) {
@@ -107,15 +125,10 @@ table tbody td:nth-child(4) {
   min-width: 130px;
 }
 table button {
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 2px 10px;
   border-radius: 40px;
   color: #FFFFFF;
   font-family: "Montserrat", sans-serif;
-  cursor: pointer;
 }
 table button.--read {
   background-color: #226D68;
@@ -124,53 +137,18 @@ table button.--to-read {
   background-color: #D6955B;
 }
 
-tr {
-  position: relative;
-}
-
-.modal {
-  display: none;
-}
-
-tr td:last-child {
-  position: relative;
-}
-
-.delete {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #BB3434;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 10%;
-  border-radius: 50%;
-  display: none;
-  cursor: pointer;
-}
-.delete svg {
-  stroke: #FFFFFF;
-}
-
-tr:hover .delete {
-  display: flex;
-}
-
 #add-button {
   background-color: #226D68;
-  font-family: "Montserrat", sans-serif;
-  display: flex;
-  align-items: center;
   gap: 5px;
   padding: 5px 15px 5px 10px;
   margin-top: 20px;
-  border: none;
   border-radius: 20px;
   color: white;
 }
 #add-button svg {
   stroke: white;
 }
+
+.modal {
+  display: none;
+}/*# sourceMappingURL=style.css.map */
