--- a/style.scss
+++ b/style.scss
@@ -40,6 +40,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .button-base {
@@ -100,6 +101,7 @@ main {
     padding: 20px;
     border-radius: 25px;
     font-family: $font-primary;
+    box-shadow: $shadow;
 }
 
 table {
@@ -204,5 +206,70 @@ table {
 }
 
 .modal {
-    display: none;
+    width: 600px;
+    min-height: 280px;
+    background-color: $modal-bg;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: $shadow;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100vh);
+
+    h2 {
+        color: $color-secondary;
+        font-family: $font-secondary;
+        font-size: 32px;
+        margin-bottom: 15px;
+    }
+
+    hr {
+        border-color: $color-toned-primary;
+        opacity: 0.3;
+        margin-bottom: 15px;
+    }
+
+    form {
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 10px;
+
+        .form__group {
+            display: flex;
+            flex-direction: column;
+            width: 48%;
+        }
+
+        label {
+            font-family: $font-primary;
+            color: $color-primary;
+            font-weight: 500;
+            margin-bottom: 5px;
+        }
+
+        input, select {
+            font-family: $font-primary;
+            color: $color-contrast;
+            border: none;
+            border-radius: 40px;
+            padding: 2px 8px;
+        }
+
+        input::placeholder {
+            color: $color-contrast;
+            opacity: 0.8;
+            font-family: $font-primary;
+        }
+
+        input:focus, select:focus {
+            border: 1px solid $color-primary;
+        }
+    }
+}
+
+.modal.visible {
+        transform: translate(-50%, -50%);
 }
