--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   position: relative;
 }
 
-.button-base, #add-button, table button, table tbody .delete, header .header__button button {
+.button-base, #modal form button, .add-button, table button, table tbody .delete, header .header__button button {
   border: none;
   display: flex;
   align-items: center;
@@ -139,7 +139,7 @@ table button.--to-read {
   background-color: #D6955B;
 }
 
-#add-button {
+.add-button, #modal form button {
   background-color: #226D68;
   gap: 5px;
   padding: 5px 15px 5px 10px;
@@ -147,11 +147,11 @@ table button.--to-read {
   border-radius: 20px;
   color: white;
 }
-#add-button svg {
+.add-button svg, #modal form button svg {
   stroke: white;
 }
 
-.modal {
+#modal {
   width: 600px;
   min-height: 280px;
   background-color: #F5F5F5;
@@ -163,60 +163,63 @@ table button.--to-read {
   left: 50%;
   transform: translate(-50%, -100vh);
 }
-.modal h2 {
+#modal h2 {
   color: #226D68;
   font-family: "FuturaLT", sans-serif;
   font-size: 32px;
   margin-bottom: 15px;
 }
-.modal hr {
+#modal hr {
   border-color: #E7E7E7;
   opacity: 0.3;
   margin-bottom: 15px;
 }
-.modal form {
+#modal form {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 10px;
 }
-.modal form .form__group {
+#modal form .form__group {
   display: flex;
   flex-direction: column;
   width: 48%;
 }
-.modal form label {
+#modal form label {
   font-family: "Montserrat", sans-serif;
   color: #D6955B;
   font-weight: 500;
   margin-bottom: 5px;
 }
-.modal form input, .modal form select {
+#modal form input, #modal form select {
   font-family: "Montserrat", sans-serif;
   color: #333333;
   border: none;
   border-radius: 40px;
   padding: 2px 8px;
 }
-.modal form input::-moz-placeholder {
+#modal form input::-moz-placeholder {
   color: #333333;
   opacity: 0.8;
   font-family: "Montserrat", sans-serif;
 }
-.modal form input:-ms-input-placeholder {
+#modal form input:-ms-input-placeholder {
   color: #333333;
   opacity: 0.8;
   font-family: "Montserrat", sans-serif;
 }
-.modal form input::placeholder {
+#modal form input::placeholder {
   color: #333333;
   opacity: 0.8;
   font-family: "Montserrat", sans-serif;
 }
-.modal form input:focus, .modal form select:focus {
+#modal form input:focus, #modal form select:focus {
   border: 1px solid #D6955B;
 }
+#modal form button {
+  margin-top: 10px;
+}
 
-.modal.visible {
+#modal.visible {
   transform: translate(-50%, -50%);
 }/*# sourceMappingURL=style.css.map */
