--- a/style.css
+++ b/style.css
@@ -10,16 +10,35 @@
   box-sizing: border-box;
 }
 
-/* color variables */
-/* table container & button text */
-/* table border & add button bg */
-/* add button icon bg & github icon */
-/* light mode toggle & main text color */
+:root.light {
+  --color-bg: #EDEDED;
+  --color-main: #FFFFFF; /* table container & button text */
+  --color-toned-primary: #E7E7E7; /* table border & add button bg */
+  --color-toned-secondary: #D9D9D9; /* add button icon bg & github icon */
+  --color-contrast: #333333; /* light mode toggle & main text color */
+  --color-primary: #D6955B;
+  --color-secondary: #226D68;
+  --color-danger: #BB3434;
+  --modal-bg: #F5F5F5;
+}
+
+:root.dark {
+  --color-bg: #2B2B2B;
+  --color-main: #202020; /* table container & button text */
+  --color-toned-primary: #171717; /* table border & add button bg */
+  --color-toned-secondary: #202020; /* add button icon bg & github icon */
+  --color-contrast: #DEDEDE; /* light mode toggle & main text color */
+  --color-primary: #D6955B;
+  --color-secondary: #226D68;
+  --color-danger: #BB3434;
+  --modal-bg: #2A2A2A;
+}
+
 /* fonts variables */
 /* size variables */
 /* misc variables */
 body {
-  background-color: #EDEDED;
+  background-color: var(--color-bg);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -38,12 +57,12 @@ body {
 }
 
 header .header__disclaimer h1 {
-  color: #226D68;
+  color: var(--color-secondary);
   font-family: "FuturaLT", sans-serif;
   font-size: 48px;
 }
 header .header__disclaimer p {
-  color: #D6955B;
+  color: var(--color-primary);
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   margin-bottom: 20px;
@@ -56,18 +75,21 @@ header .header__button {
 header .header__button button {
   height: 35px;
   width: 35px;
-  background-color: #D9D9D9;
+  background-color: var(--color-toned-secondary);
   border-radius: 50%;
 }
+header .header__button button svg {
+  stroke: var(--color-contrast);
+}
 header .header__button button#light-mode-toggle {
-  background-color: #333333;
+  background-color: var(--color-contrast);
 }
 header .header__button button#light-mode-toggle svg {
-  stroke: #D9D9D9;
+  stroke: var(--color-toned-secondary);
 }
 
 main {
-  background-color: #FFFFFF;
+  background-color: var(--color-main);
   padding: 20px;
   border-radius: 25px;
   font-family: "Montserrat", sans-serif;
@@ -79,20 +101,21 @@ table {
   border-collapse: collapse;
 }
 table thead tr {
-  border-bottom: #E7E7E7 solid 1px;
+  border-bottom: var(--color-toned-primary) solid 1px;
 }
 table thead tr th {
-  color: #D6955B;
+  color: var(--color-primary);
   font-weight: 700;
-  border-left: #E7E7E7 solid 1px;
+  border-left: var(--color-toned-primary) solid 1px;
   padding: 10px;
 }
 table thead tr th:first-child {
   border: none;
 }
 table tbody td {
-  border-left: #E7E7E7 solid 1px;
+  border-left: var(--color-toned-primary) solid 1px;
   padding: 10px;
+  color: var(--color-contrast);
 }
 table tbody td:first-child {
   border: none;
@@ -104,7 +127,7 @@ table tbody td:last-child {
 table tbody .delete {
   width: 20px;
   height: 20px;
-  background-color: #BB3434;
+  background-color: var(--color-danger);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -129,32 +152,32 @@ table tbody td:nth-child(4) {
 table button {
   padding: 2px 10px;
   border-radius: 40px;
-  color: #FFFFFF;
+  color: var(--color-main);
   font-family: "Montserrat", sans-serif;
 }
 table button.--read {
-  background-color: #226D68;
+  background-color: var(--color-secondary);
 }
 table button.--to-read {
-  background-color: #D6955B;
+  background-color: var(--color-primary);
 }
 
 .add-button, #modal form button {
-  background-color: #226D68;
+  background-color: var(--color-secondary);
   gap: 5px;
   padding: 5px 15px 5px 10px;
   margin-top: 20px;
   border-radius: 20px;
-  color: white;
+  color: var(--color-main);
 }
 .add-button svg, #modal form button svg {
-  stroke: white;
+  stroke: var(--color-main);
 }
 
 #modal {
   width: 600px;
   min-height: 280px;
-  background-color: #F5F5F5;
+  background-color: var(--modal-bg);
   padding: 30px;
   border-radius: 15px;
   box-shadow: 0px 0px 58px -25px rgba(75, 75, 75, 0.25);
@@ -172,16 +195,16 @@ table button.--to-read {
   right: 40px;
 }
 #modal #close-modal svg {
-  stroke: #BB3434;
+  stroke: var(--color-danger);
 }
 #modal h2 {
-  color: #226D68;
+  color: var(--color-secondary);
   font-family: "FuturaLT", sans-serif;
   font-size: 32px;
   margin-bottom: 15px;
 }
 #modal hr {
-  border-color: #E7E7E7;
+  border-color: var(--color-toned-primary);
   opacity: 0.3;
   margin-bottom: 15px;
 }
@@ -198,34 +221,35 @@ table button.--to-read {
 }
 #modal form label {
   font-family: "Montserrat", sans-serif;
-  color: #D6955B;
+  color: var(--color-primary);
   font-weight: 500;
   margin-bottom: 5px;
 }
 #modal form input, #modal form select {
   font-family: "Montserrat", sans-serif;
-  color: #333333;
+  color: var(--color-contrast);
+  background-color: var(--color-main);
   border: none;
   border-radius: 40px;
   padding: 2px 8px;
 }
 #modal form input::-moz-placeholder {
-  color: #333333;
+  color: var(--color-contrast);
   opacity: 0.8;
   font-family: "Montserrat", sans-serif;
 }
 #modal form input:-ms-input-placeholder {
-  color: #333333;
+  color: var(--color-contrast);
   opacity: 0.8;
   font-family: "Montserrat", sans-serif;
 }
 #modal form input::placeholder {
-  color: #333333;
+  color: var(--color-contrast);
   opacity: 0.8;
   font-family: "Montserrat", sans-serif;
 }
 #modal form input:focus, #modal form select:focus {
-  border: 1px solid #D6955B;
+  border: 1px solid var(--color-primary);
 }
 #modal form button {
   margin-top: 10px;
