--- a/style.scss
+++ b/style.scss
@@ -11,16 +11,29 @@
     box-sizing: border-box;
 }
 
-/* color variables */
-$color-bg: #EDEDED;
-$color-main: #FFFFFF; /* table container & button text */
-$color-toned-primary: #E7E7E7; /* table border & add button bg */
-$color-toned-secondary: #D9D9D9; /* add button icon bg & github icon */
-$color-contrast: #333333; /* light mode toggle & main text color */
-$color-primary: #D6955B;
-$color-secondary: #226D68;
-$color-danger: #BB3434;
-$modal-bg: #F5F5F5;
+:root.light {
+    --color-bg: #EDEDED;
+    --color-main: #FFFFFF; /* table container & button text */
+    --color-toned-primary: #E7E7E7; /* table border & add button bg */
+    --color-toned-secondary: #D9D9D9; /* add button icon bg & github icon */
+    --color-contrast: #333333; /* light mode toggle & main text color */
+    --color-primary: #D6955B;
+    --color-secondary: #226D68;
+    --color-danger: #BB3434;
+    --modal-bg: #F5F5F5;
+}
+
+:root.dark {
+    --color-bg: #2B2B2B;
+    --color-main: #202020; /* table container & button text */
+    --color-toned-primary: #171717; /* table border & add button bg */
+    --color-toned-secondary: #202020; /* add button icon bg & github icon */
+    --color-contrast: #DEDEDE; /* light mode toggle & main text color */
+    --color-primary: #D6955B;
+    --color-secondary: #226D68;
+    --color-danger: #BB3434;
+    --modal-bg: #2A2A2A;
+}
 
 /* fonts variables */
 $font-primary: 'Montserrat', sans-serif;
@@ -34,7 +47,7 @@ $size-font-main: 16px;
 $shadow: 0px 0px 58px -25px rgba(75, 75, 75, 0.25);
 
 body {
-    background-color: $color-bg;
+    background-color: var(--color-bg);
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -57,13 +70,13 @@ header {
     .header__disclaimer {    
         
         h1 {
-        color: $color-secondary;
+        color: var(--color-secondary);
         font-family: $font-secondary;
         font-size: $size-font-title;
         }
 
         p {
-            color: $color-primary;
+            color: var(--color-primary);
             font-family: $font-primary;
             font-size: $size-font-main;
             margin-bottom: 20px;
@@ -80,15 +93,19 @@ header {
             @extend .button-base;
             height: 35px;
             width: 35px;
-            background-color: $color-toned-secondary;
+            background-color: var(--color-toned-secondary);
             border-radius: 50%;
+
+            svg {
+                stroke: var(--color-contrast);
+            }
             }
 
         button#light-mode-toggle {
-            background-color: $color-contrast;
+            background-color: var(--color-contrast);
 
             svg {
-                stroke: $color-toned-secondary;
+                stroke: var(--color-toned-secondary);
             }
         }
 
@@ -97,7 +114,7 @@ header {
 }
 
 main {
-    background-color: $color-main;
+    background-color: var(--color-main);
     padding: 20px;
     border-radius: 25px;
     font-family: $font-primary;
@@ -110,12 +127,12 @@ table {
     border-collapse: collapse;
     
     thead tr {
-        border-bottom: $color-toned-primary solid 1px;
+        border-bottom: var(--color-toned-primary) solid 1px;
 
         th {
-            color: $color-primary;
+            color: var(--color-primary);
             font-weight: 700;
-            border-left: $color-toned-primary solid 1px;
+            border-left: var(--color-toned-primary) solid 1px;
             padding: 10px;
         }
 
@@ -127,8 +144,9 @@ table {
     tbody {
 
         td {
-            border-left: $color-toned-primary solid 1px;
+            border-left: var(--color-toned-primary) solid 1px;
             padding: 10px;
+            color: var(--color-contrast)
         }
 
         td:first-child {
@@ -144,7 +162,7 @@ table {
             @extend .button-base;
             width: 20px;
             height: 20px;
-            background-color: $color-danger;
+            background-color: var(--color-danger);
             position: absolute;
             top: 50%;
             transform:translateY(-50%);
@@ -177,38 +195,38 @@ table {
         @extend .button-base;
         padding: 2px 10px;
         border-radius: 40px;
-        color: $color-main;
+        color: var(--color-main);
         font-family: $font-primary;
     }
 
     button.--read {
-        background-color: $color-secondary;
+        background-color: var(--color-secondary);
     }
 
     button.--to-read {
-        background-color: $color-primary;
+        background-color: var(--color-primary);
     }
 
 }
 
 .add-button {
     @extend .button-base;
-    background-color: $color-secondary;
+    background-color: var(--color-secondary);
     gap: 5px;
     padding: 5px 15px 5px 10px;
     margin-top: 20px;
     border-radius: 20px;
-    color: white;
+    color: var(--color-main);
 
     svg {
-        stroke: white;
+        stroke: var(--color-main);
     } 
 }
 
 #modal {
     width: 600px;
     min-height: 280px;
-    background-color: $modal-bg;
+    background-color: var(--modal-bg);
     padding: 30px;
     border-radius: 15px;
     box-shadow: $shadow;
@@ -227,19 +245,19 @@ table {
         right: 40px;
 
         svg {
-            stroke: $color-danger;
+            stroke: var(--color-danger);
         }
     }
 
     h2 {
-        color: $color-secondary;
+        color: var(--color-secondary);
         font-family: $font-secondary;
         font-size: 32px;
         margin-bottom: 15px;
     }
 
     hr {
-        border-color: $color-toned-primary;
+        border-color: var(--color-toned-primary);
         opacity: 0.3;
         margin-bottom: 15px;
     }
@@ -259,27 +277,28 @@ table {
 
         label {
             font-family: $font-primary;
-            color: $color-primary;
+            color: var(--color-primary);
             font-weight: 500;
             margin-bottom: 5px;
         }
 
         input, select {
             font-family: $font-primary;
-            color: $color-contrast;
+            color: var(--color-contrast);
+            background-color: var(--color-main);
             border: none;
             border-radius: 40px;
             padding: 2px 8px;
         }
 
         input::placeholder {
-            color: $color-contrast;
+            color: var(--color-contrast);
             opacity: 0.8;
             font-family: $font-primary;
         }
 
         input:focus, select:focus {
-            border: 1px solid $color-primary;
+            border: 1px solid var(--color-primary);
         }
 
         button {
