Make minor tweaks
Added github repo link and min-width on table in case of empty state.

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ main {
 table {
   text-align: left;
   border-collapse: collapse;
+  min-width: 990px;
 }
 table thead tr {
   border-bottom: var(--color-toned-primary) solid 1px;
