--- a/style.scss
+++ b/style.scss
@@ -125,6 +125,7 @@ table {
 
     text-align: left;
     border-collapse: collapse;
+    min-width: 990px;
     
     thead tr {
         border-bottom: var(--color-toned-primary) solid 1px;
